force-app/main/default/objects/Aesthetic_Consult_Recommendations__c/Aesthetic_Consult_Recommendations__c.object-meta.xml
<CustomObject>
    <label>Esthetic Consult Recommendations</label>
    <nameField>
        <displayFormat>Rec-{00}</displayFormat>
        <label>Aesthetic Consult Recommendations Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Esthetic Consult Recommendations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>