force-app/main/default/objects/Aesthetic_Consult_Recommendations__c/fields/Aesthetic_consult_Area__c.field-meta.xml
<CustomField>
    <fullName>Aesthetic_consult_Area__c</fullName>
    <label>Aesthetic consult Area</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Glabellar</fullName>
            </value>
            <value>
                <fullName>Crows Feet</fullName>
            </value>
            <value>
                <fullName>Forehead</fullName>
            </value>
            <value>
                <fullName>Bunny Scrunch</fullName>
            </value>
            <value>
                <fullName>Chin</fullName>
            </value>
            <value>
                <fullName>Lip Flip</fullName>
            </value>
            <value>
                <fullName>Temples</fullName>
            </value>
            <value>
                <fullName>Jawline</fullName>
            </value>
            <value>
                <fullName>Right Cheek</fullName>
            </value>
            <value>
                <fullName>Left Cheek</fullName>
            </value>
            <value>
                <fullName>Chin Fat Pad</fullName>
            </value>
            <value>
                <fullName>Body Bella</fullName>
            </value>
            <value>
                <fullName>Marionette Lines</fullName>
            </value>
            <value>
                <fullName>Downward Turn Mouth</fullName>
            </value>
            <value>
                <fullName>Nasal Labial Folds</fullName>
            </value>
            <value>
                <fullName>Under Eyes</fullName>
            </value>
            <value>
                <fullName>Perioral Lines</fullName>
            </value>
            <value>
                <fullName>Lips</fullName>
            </value>
            <value>
                <fullName>Face</fullName>
            </value>
            <value>
                <fullName>nose</fullName>
            </value>
            <value>
                <fullName>Masseters</fullName>
            </value>
            <value>
                <fullName>Sculptra Body</fullName>
            </value>
            <value>
                <fullName>Jelly Roll</fullName>
            </value>
            <value>
                <fullName>Brow Lift</fullName>
            </value>
            <value>
                <fullName>neck</fullName>
            </value>
            <value>
                <fullName>Chest</fullName>
            </value>
            <value>
                <fullName>Hands</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>