force-app/main/default/objects/Aesthetic_Consult_Recommendations__c/fields/Aesthetic_consult_Comments__c.field-meta.xml
<CustomField>
    <fullName>Aesthetic_consult_Comments__c</fullName>
    <label>Aesthetic consult Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>