force-app/main/default/objects/Aesthetic_Consult_Recommendations__c/fields/Aesthetic_Consult_Other_Notes__c.field-meta.xml
<CustomField>
    <fullName>Aesthetic_Consult_Other_Notes__c</fullName>
    <label>Aesthetic Consult  Other Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>