force-app/main/default/objects/Aesthetic_Consult_Recommendations__c/fields/Chart__c.field-meta.xml
<CustomField>
    <fullName>Chart__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chart</label>
    <referenceTo>Chart__c</referenceTo>
    <relationshipName>Aesthetic_Consult_Recommendations</relationshipName>
    <type>Lookup</type>
</CustomField>