force-app/main/default/objects/Aesthetic_Consult_Recommendations__c/fields/Membership_Consult_Notes__c.field-meta.xml
<CustomField>
    <fullName>Membership_Consult_Notes__c</fullName>
    <description>Aesthetic Consult Membership Consult Notes</description>
    <label>Membership Consult Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>